Adding POST method for awards
Adding post method for awards in response to user feedback
