# datastore-api-server/controllers/default_controller.py
@@ -1,5 +1,20 @@
 import flask
 
+def get_mock_slim_award():
+    return {
+        "AgencyIdentifier": "string",
+        "BeginningPeriodOfAvailability": "string",
+        "EndingPeriodOfAvailability": "string",
+        "MainAccountCode": "string",
+        "SubAccountCode": "string",
+        "PIID": "string",
+        "ParentAwardId": "string",
+        "FAIN": "string",
+        "URI": "string",
+        "TransactionObligatedAmount": "string",
+        "AwardType": "string"
+    }
+
 def get_mock_award():
     return {
         "VendorFaxNumber": "string",
@@ -62,5 +77,11 @@ def award_piid_piid_get(PIID):
 def award_uri_uri_get(URI):
     return flask.jsonify({ "results": get_mock_award() })
 
+def awards_post(body):
+    return flask.jsonify({ "results": [get_mock_award(), get_mock_award()]})
+
 def awards_qualifiers_get(qualifiers):
     return flask.jsonify({ "results": [get_mock_award(), get_mock_award()]})
+
+def awards_slim_qualifiers_get(qualifiers):
+    return flask.jsonify({ "results": [get_mock_slim_award(), get_mock_slim_award()]})
