# datastore-api-server/swagger/swagger.yaml
@@ -84,18 +84,50 @@ paths:
           description: "An unexpected error occured."
           schema:
             $ref: "#/definitions/Error"
-  /awards/{qualifiers}:
+  /awards:
+    post:
+      tags:
+      - "default_controller"
+      summary: "Returns all awards which match specified qualifiers with a high level\
+        \ of detail"
+      operationId: "controllers.default_controller.awards_post"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "A json object representing a set of qualifiers\n"
+        required: false
+        schema:
+          $ref: "#/definitions/postqualifiers"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Awards"
+        404:
+          description: "Resource not found."
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: "An unexpected error occured."
+          schema:
+            $ref: "#/definitions/Error"
+  /awards/slim/{qualifiers}:
     get:
       tags:
       - "default_controller"
       summary: "Returns all awards which match the specified qualifiers"
       description: "Returns an array of award objects with a low level of detail"
-      operationId: "controllers.default_controller.awards_qualifiers_get"
+      operationId: "controllers.default_controller.awards_slim_qualifiers_get"
       parameters:
       - name: "qualifiers"
         in: "path"
-        description: "A set of qualifiers by which to filter the data.\n\nThe format\
-          \ is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
+        description: "A set of qualifiers by which to filter the data.\nIf you are\
+          \ using multiple filters, it is recommended to use the POST version of this\
+          \ endpoint.\n\nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
           \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than\
           \ $10,000\nfor an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
         required: true
@@ -113,7 +145,50 @@ paths:
           description: "An unexpected error occured."
           schema:
             $ref: "#/definitions/Error"
+  /awards/{qualifiers}:
+    get:
+      tags:
+      - "default_controller"
+      summary: "Returns all awards which match the specified qualifiers"
+      description: "Returns an array of award objects with a high level of detail"
+      operationId: "controllers.default_controller.awards_qualifiers_get"
+      parameters:
+      - name: "qualifiers"
+        in: "path"
+        description: "A set of qualifiers by which to filter the data.\nIf you are\
+          \ using multiple filters, it is recommended to use the POST version of this\
+          \ endpoint.\n\nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
+          \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than\
+          \ $10,000\nfor an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Awards"
+        404:
+          description: "Resource not found."
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: "An unexpected error occured."
+          schema:
+            $ref: "#/definitions/Error"
 definitions:
+  postqualifiers:
+    type: "object"
+    properties:
+      fieldname:
+        type: "string"
+        example: "TransactionObligatedAmount"
+        description: "The field name to which the filter applies"
+      filter:
+        $ref: "#/definitions/postqualifiers_filter"
+  Awards:
+    type: "array"
+    items:
+      $ref: "#/definitions/Award"
   SlimAwards:
     type: "array"
     items:
@@ -426,6 +501,17 @@ definitions:
         type: "string"
       message:
         type: "string"
+  postqualifiers_filter:
+    properties:
+      operation:
+        type: "string"
+        example: "greater"
+        description: "An operation to perform a comparison on the field value"
+      value:
+        type: "string"
+        example: "3500"
+        description: "The value to use in the operation comparison"
+    description: "A filter, comprised of an operation and value"
 parameters:
   fain:
     name: "FAIN"
@@ -448,9 +534,10 @@ parameters:
   qualifiers:
     name: "qualifiers"
     in: "path"
-    description: "A set of qualifiers by which to filter the data.\n\nThe format is\
-      \ <FIELD>:<CONSTRAINT>:<CONSTRAINT PARAMETER>,\n<FIELD>:<CONSTRAINT>:<CONSTRAINT\
-      \ PARAMETER>, ...\n\nFor example if we wanted to find awards greater than $10,000\n\
+    description: "A set of qualifiers by which to filter the data.\nIf you are using\
+      \ multiple filters, it is recommended to use the POST version of this endpoint.\n\
+      \nThe format is FIELD:CONSTRAINT:CONSTRAINT PARAMETER,\nFIELD:CONSTRAINT:CONSTRAINT\
+      \ PARAMETER, ...\n\nFor example if we wanted to find awards greater than $10,000\n\
       for an agency with identifier of 097, we could use:\n\nAgencyIdentifier:equals:097,TransactionObligatedAmount:greater:10000\n"
     required: true
     type: "string"
